--- a/package.json
+++ b/package.json
@@ -6,15 +6,25 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server --watch ./data/db.json --port 9000"
   },
   "dependencies": {
+    "@chakra-ui/core": "^0.8.0",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
+    "formik": "^2.2.9",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-table": "^7.8.0",
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   },
   "devDependencies": {
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.3"
+    "eslint-config-next": "12.2.3",
+    "prettier-eslint": "^15.0.1"
   }
 }
