--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "address_demo",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,15 +10,19 @@
     "server": "json-server --watch ./data/db.json --port 9000"
   },
   "dependencies": {
-    "@chakra-ui/core": "^0.8.0",
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@hookform/resolvers": "^2.9.7",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
-    "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
     "next": "12.2.3",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.33.1",
     "react-table": "^7.8.0",
+    "styled-components": "^5.3.5",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2"
   },
